--- a/EShopping/ApiGateway/ApiGateway.csproj
+++ b/EShopping/ApiGateway/ApiGateway.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Ocelot" Version="23.1.0" />
+    <PackageReference Include="Ocelot.Cache.CacheManager" Version="23.1.0" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="23.1.0" />
   </ItemGroup>
 
